[package]
name = "compression"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22.3"

[lib]
name = "compression"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "huffman"
harness = false
